force-app/main/default/objects/Apprentice__c/Apprentice__c.object-meta.xml
<CustomObject>
    <label>Apprentice</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Apprentice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apprentices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>