force-app/main/default/objects/Apprentice__c/fields/Application_Completed__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Purpose: Populated via a Writeback Tag on the Apprentice Application Document and determines if they completed the application and if so, triggers the Offer Letter to be sent.</description>
    <label>Application Completed?</label>
    <type>Checkbox</type>
</CustomField>