force-app/main/default/objects/Apprentice__c/fields/Apprentice_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Apprentice_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apprentice Acceptance</label>
    <type>Checkbox</type>
</CustomField>