force-app/main/default/objects/Apprentice__c/fields/Apprentice_Lead__c.field-meta.xml
<CustomField>
    <fullName>Apprentice_Lead__c</fullName>
    <formula>Apprenticeship__r.Apprenticeship_Lead__r.FirstName + &quot; &quot; + Apprenticeship__r.Apprenticeship_Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apprentice Lead</label>
    <type>Text</type>
</CustomField>