force-app/main/default/objects/Apprentice__c/fields/Apprentice_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Apprentice_Lead_Email__c</fullName>
    <formula>Apprenticeship__r.Apprenticeship_Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apprentice Lead Email</label>
    <type>Text</type>
</CustomField>