force-app/main/default/objects/Apprentice__c/fields/Apprenticeship__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW
Business Unit: WFT</description>
    <label>Apprenticeship</label>
    <referenceTo>Apprenticeship__c</referenceTo>
    <relationshipLabel>Apprentices</relationshipLabel>
    <relationshipName>Apprentices</relationshipName>
    <type>Lookup</type>
</CustomField>