force-app/main/default/objects/Apprentice__c/fields/Apprenticeship_Lead__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW
WFT
Is set by automation, used in email alerts.</description>
    <label>Apprenticeship Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Apprentices (Apprenticeship Lead)</relationshipLabel>
    <relationshipName>Apprentices_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>