force-app/main/default/objects/Apprentice__c/fields/Conga_Apprenticeship_City_State__c.field-meta.xml
<CustomField>
    <fullName>Conga_Apprenticeship_City_State__c</fullName>
    <description>Created by: JA
Purpose: For the Conga Apprentice Offer Letter, needs to show the city and state.</description>
    <formula>Apprenticeship__r.Primary_Location__r.Shipping_City__c + &quot;, &quot; + Apprenticeship__r.Primary_Location__r.Shipping_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Apprenticeship City/State</label>
    <type>Text</type>
</CustomField>