force-app/main/default/objects/Apprentice__c/fields/Conga_Apprenticeship_Lead_Title__c.field-meta.xml
<CustomField>
    <fullName>Conga_Apprenticeship_Lead_Title__c</fullName>
    <description>Created By:SA 
Purpose: For the conga Apprentice Offer Letter</description>
    <formula>Apprenticeship__r.Name  + &quot; Lead&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Apprenticeship Lead Title</label>
    <type>Text</type>
</CustomField>