force-app/main/default/objects/Apprentice__c/fields/Conga_Apprenticeship_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Apprenticeship_Name__c</fullName>
    <description>Created by: JA
Purpose: Pulls down the Apprenticeship&apos;s name to be used for Conga</description>
    <formula>Apprenticeship__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Apprenticeship Name</label>
    <type>Text</type>
</CustomField>