force-app/main/default/objects/Apprentice__c/fields/Conga_Apprenticeship_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Conga_Apprenticeship_Start_Date__c</fullName>
    <description>Created By:SA
Purpose: For the Conga Apprenticeship Offer letter.</description>
    <formula>TEXT(Apprenticeship__r.Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Apprenticeship Start Date</label>
    <type>Text</type>
</CustomField>