force-app/main/default/objects/Apprentice__c/fields/Conga_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Contact_Name__c</fullName>
    <description>Created by: JA
Purpose: Pulls down the Contacts first and last name, concatenates them, and is used for Conga</description>
    <formula>Contact__r.FirstName + &quot; &quot; + Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Contact Name</label>
    <type>Text</type>
</CustomField>