force-app/main/default/objects/Apprentice__c/fields/Conga_Offer_Letter_and_PIIA__c.field-meta.xml
<CustomField>
    <fullName>Conga_Offer_Letter_and_PIIA__c</fullName>
    <description>##Conga created button:00b3i000000uTVS
##Conga updated button:00b3i000000uTVS</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[OLQ2021]0Q_000EAY107931&quot; + 
&quot;&amp;templateid=0T_001EAY754798,0T_002EAY303100&quot; + 
&quot;&amp;qmode=congasign&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;csvisible=1&quot; + 
&quot;&amp;csrecipient1=&quot; + Contact__c +
&quot;&amp;ofn=&quot; + Conga_Contact_Name__c + &quot; - &quot; + Conga_Apprenticeship_Name__c + &quot; - Offer Letter (Alpha Works)&quot; + &quot; &amp; PIIA&quot; + 
&quot;&amp;sc1=SalesforceFile&quot; + 
&quot;&amp;csbusinessunit=Alpha_Works&quot; + 
&quot;&amp;csemailsubject=Offer Letter - Apprentice at Alpha Works&quot;</formula>
    <label>Conga Offer Letter and PIIA</label>
    <type>Text</type>
</CustomField>