force-app/main/default/objects/Apprentice__c/fields/Conga_Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Conga_Onboarding_Application__c</fullName>
    <description>##Conga created button:00b2F0000026PU8
##Conga updated button:00b2F0000026PU8
##Conga updated button:00b3i000000uTVN</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=0T_000EAY868047&quot; + 
&quot;&amp;qmode=congasign&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;csvisible=1&quot; + 
&quot;&amp;csrecipient1=&quot; + Contact__c +
&quot;&amp;csemailsubject=&quot; + Conga_Apprenticeship_Name__c + &quot; Application&quot; + 
&quot;&amp;ofn=&quot; + Conga_Contact_Name__c + &quot; - &quot; + Conga_Apprenticeship_Name__c + &quot; - Application for Employment (Alpha Works)&quot; + 
&quot;&amp;sc1=SalesforceFile&quot; + 
&quot;&amp;csbusinessunit=Alpha_Works&quot;</formula>
    <label>Conga Onboarding Application</label>
    <type>Text</type>
</CustomField>