force-app/main/default/objects/Apprentice__c/fields/Conga_Overtime_Pay__c.field-meta.xml
<CustomField>
    <fullName>Conga_Overtime_Pay__c</fullName>
    <description>Created by: JA
Purpose: For use with the Conga Offer Letter</description>
    <formula>CASE( Hourly_Wage__c,
&quot;$17&quot;, &quot;$&quot;+TEXT(17*1.5)+&quot;0&quot;,
&quot;$20&quot;, &quot;$&quot;+TEXT(20*1.5),
&quot;$22&quot;, &quot;$&quot;+TEXT(22*1.5),
&quot;$25&quot;, &quot;$&quot;+TEXT(25*1.5)+&quot;0&quot;,
TEXT(Hourly_Wage__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Overtime Pay</label>
    <type>Text</type>
</CustomField>