force-app/main/default/objects/Apprentice__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW
Business Unit: WFT</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Apprenticeships (Apprentice)</relationshipLabel>
    <relationshipName>Apprentices</relationshipName>
    <type>Lookup</type>
</CustomField>