force-app/main/default/objects/Apprentice__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Created by JW
Business Unit: WFT
Pulls down the email address of the Apprentice from their Contact record.</description>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>