force-app/main/default/objects/Apprentice__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Created by JW
Business Unit: WFT
Tracks when this apprentice stopped working for this Apprenticeship.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>