force-app/main/default/objects/Apprentice__c/fields/Hourly_Wage__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Wage__c</fullName>
    <label>Hourly Wage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$17</fullName>
            </value>
            <value>
                <fullName>$20</fullName>
            </value>
            <value>
                <fullName>$22</fullName>
            </value>
            <value>
                <fullName>$25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>