force-app/main/default/objects/Apprentice__c/fields/Lead_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Lead_Calendly__c</fullName>
    <formula>Apprenticeship__r.Apprenticeship_Lead__r.Calendly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Calendly</label>
    <type>Text</type>
</CustomField>