force-app/main/default/objects/Apprentice__c/fields/Offer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Offer_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Purpose: Populated via a Writeback Tag on the Apprentice Offer Letter Document and determines if they completed the accepted the offer/signed the offer letter doc and if so, triggers the Offer Letter to be sent.</description>
    <label>Offer Accepted?</label>
    <type>Checkbox</type>
</CustomField>