force-app/main/default/objects/Apprentice__c/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <description>Created by JW
Business Unit: WFT
Pulls down Pronouns from the Apprentice&apos;s related Contact.</description>
    <formula>TEXT(Contact__r.Pronouns__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pronouns</label>
    <type>Text</type>
</CustomField>