force-app/main/default/objects/Apprentice__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Created by JW
Business Unit: WFT
Tracks when this Apprentice started work for the Apprenticeship.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>