force-app/main/default/objects/Apprentice__c/validationRules/Active_Apprentice_Field_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Apprentice_Field_Requirements</fullName>
    <active>true</active>
    <description>Created by GS/MA/VC
Business Unit: WFT
Purpose: If the Apprentice is set to Active, requires Hourly Wage and Start Date.</description>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Active&quot;), 
OR (
ISBLANK(TEXT(Hourly_Wage__c)),
ISNULL(Start_Date__c)
)
)</errorConditionFormula>
    <errorMessage>To set an Apprentice as active you need:
Hourly Wage,
Start Date</errorMessage>
</ValidationRule>