force-app/main/default/objects/Apprentice__c/validationRules/Apprentice_Contact_Has_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Apprentice_Contact_Has_Email</fullName>
    <active>true</active>
    <description>Ensure every apprentice contact has an email.</description>
    <errorConditionFormula>ISBLANK(Contact__r.Email)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>The Apprentice Contact does not have an email address.</errorMessage>
</ValidationRule>