force-app/main/default/objects/Apprentice__c/validationRules/Apprenticeship_Must_Have_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Apprenticeship_Must_Have_Lead</fullName>
    <active>true</active>
    <description>GS
Purpose: Apprenticeship must have a Lead assigned.</description>
    <errorConditionFormula>ISBLANK( Apprenticeship__r.Apprenticeship_Lead__c )</errorConditionFormula>
    <errorDisplayField>Apprenticeship__c</errorDisplayField>
    <errorMessage>Apprenticeship does not have a Lead.</errorMessage>
</ValidationRule>