force-app/main/default/objects/Apprentice__c/listViews/Terminated_Apprentices.listView-meta.xml
<ListView>
    <fullName>Terminated_Apprentices</fullName>
    <columns>NAME</columns>
    <columns>Apprenticeship__c</columns>
    <columns>Contact__c</columns>
    <columns>Pronouns__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Terminated</value>
    </filters>
    <label>Terminated Apprentices</label>
    <sharedTo>
        <group>HR_Team</group>
        <group>Tech_Support_Team</group>
        <group>WFT_Instructor_Team</group>
        <group>WFT_TA_Team</group>
    </sharedTo>
</ListView>